--- a/vignettes/Processing Different Question Types.Rmd
+++ b/vignettes/Processing Different Question Types.Rmd
@@ -57,4 +57,11 @@ demoquestion<-generate_summary_stats(demoquestion, horizontal_table=TRUE)
 demoquestion[['Table']]
 ````
 
+When we process all the questions and make_results, the table appears as such in the word doc: 
+<table style="width:100%">
+  <tr>
+    <th><img width=300px src=https://i.imgur.com/HqEHLzj.png"></th>
+  </tr>
+</table> 
+
 The numbers are calculated using R base functions, with the possibility of more being added. 
