I added a new test to test_mcsa_question_processing.R so that the changes in this enhanccement will be checked for!

--- a/Testing Enhancements/Testing_MC_NA_Matrix.Rmd
+++ b/Testing Enhancements/Testing_MC_NA_Matrix.Rmd
@@ -156,6 +156,10 @@ saveRDS(NA_Matrix_Table, file = here::here("data", "Sample Surveys", "Multiple C
 saveRDS(original_first_rows, file = here::here("data", "Sample Surveys", "Multiple Choice with NA", "RDS", "original_first_rows.rds"))
 
 
+question$Table <- NULL
+
+saveRDS(question, file = here::here("data", "Sample Surveys", "Multiple Choice with NA", "RDS", "NA_Matrix_Question_NO_Table.rds"))
+
 
 ```
 
