--- a/Testing Stuff/FurtherSortingWork.Rmd
+++ b/Testing Stuff/FurtherSortingWork.Rmd
@@ -166,8 +166,7 @@ question <- questions[[3]]
 # Delete the table - I wanna generate it myself
 question$Table = NULL
 
-question <- mc_multiple_answer_results(question, original_first_rows)
+question <- mc_multiple_answer_results(question, original_first_rows, sort_by = "Choices_Alpha")
 question$Table
-
 ```
 
