--- a/vignettes/Comment-Coding.Rmd
+++ b/vignettes/Comment-Coding.Rmd
@@ -22,11 +22,15 @@ for a single text entry component.
 
 ### NVivo Crosstab Export
 
-Coded comments using the `code_type` specification "nvivo" contain an unlabeled first column
+When coding comments with NVivo, use the matrix export for each note to produce a coded comment table
+compatible with QualtricsTools. Coded comments using the `code_type` specification 
+"nvivo" contain an unlabeled first column
 of ResponseIDs. The second column is labeled with the variable name and includes 1's and 0's indicating
-response presence for each respondent. Unlike FileMaker exports, this includes data for all respodnents,
-regardless of whether they responded to the question and have coded comment data. Columns to the right of this
-contain the coded comment categories, similar to the FMP export style. Crosstab exports from NVivo
+response presence for each respondent. The variable name in the second column header will be used to link
+coded comment responses to the appropriate survey question as part of the QualtircsTools setup process. 
+Unlike FileMaker exports, this NVivo matrix export cna include data for all respondents,
+regardless of whether they responded to the question and have coded comment data. Columns to the right of this ResponseID column contain the coded comment categories as headers with 1's and 0's indicating whether 
+the response was assigned to that category. Crosstab exports from NVivo
 may also contain a "Total" column. This "Total" column is not necessary and will be ignored
 when creating the coded comment table.
 
@@ -48,6 +52,12 @@ values in each row. To the right of the "varname" column, is a column labeled wi
 containg full response text for each respondent. To the right of this question text, each column title 
 represents a category which have "1" entries in cells to represent a respondent's
 response being categorized into the given category. 
+
+For a couple years after switching to comment coding in NVivo, OIR procedures involved exporting from NVivo 
+and then coercing data to FMP format so that the coded comment export data would be compatible with QualtricsTools.
+Updates in April have added compatability with NVivo matrix exports without requiring modification. However, 
+old reports that have coded comments prepared according to former guidelines may require using the 
+code_type "fmp" specification.
 
 Sample data are shown below to illustrate the `code_type = "fmp"` data export format.
 
@@ -124,3 +134,57 @@ output_filepath <- make_coded_comments(
 
 shiny::includeHTML(output_filepath)
 ```
+
+### Using Command Line Functions to Create Coded Comment Appendices
+
+There are two functions to create coded comment appendices:
+
+1. **make_coded_comments** creates coded comment appendix for an overall survey summary report
+2. **make_split_coded_comments** creates coded comment appendices for split supgroup reports
+
+Both of these functions require the following arguments (input):
+
+
+* **qsf_path**: The path location of the .qsf file to be processed. This must be passed as text string (surrounded by "") 
+and, on a Windows machine, all '\' must be replaced by '/'. If no qsf_path is provided, the user will be asked to choose 
+a qsf.
+
+* **csv_path**: The string path location of the .csv file to be processed. This requires path specifications as above. 
+If no csv_path is provided, the user will be prompted to choose from the dialogue box.
+
+* **headerrows**: Specifies the number of header rows in the CSV data. 
+Use 3 for data exported under current OIR specifications (legacy exporter, unchecked legacy view results)
+
+* **sheets_dir**: The string path location of the directory which contains Excel documents for each coded comment 
+using one of the two formats specified. All coded comments must use the same data output format that follows the 
+NVivo or FileMaker Pro export format.
+
+* **output_dir**: The string path for the directory to which R should write the coded comment report. If not specified,
+your coded comment appendix will be written to a temporaryy file.
+
+* **n_threshold**: The the number of verbatim comments which must appear before an appendix of
+coded comments will be included. This defaults to 15, but it can be set to any level. Split appendices may require 
+a lower n_threshold since some subgroups are smaller.
+
+* **code_type**: The type of coded comment data export. These two  types of data exports are described above.
+If no code_type is specified, the default is to use NVivo crosstab export with the ResponseID in the first row and
+second column labeled with the varnmae and containing response presence
+1/0 indicator. For old filemaker pro format, use "fmp" specification.
+
+* **filename**: The desired name of the output file including extension (e.g. .docx). If this is not specified, 
+it will default to "Text Appendices with Coded Comments.docx".
+
+  * `filename` is relevant for make_coded_comments ONLY. Split coded comment appendices generated using 
+  make_split_coded_comments on the command line will be named based on the split group.
+  
+* **split_by**: A list specifying which columns of the response date should be used to split the respondents. This
+can be one column or a combination of columns. The split_by specifications will be used to create filenames 
+for split coded comment appendices.
+
+  * `split_by` ia relevant for make_split_coded_comments ONLY, since make_coded_comments is used for overall reports.
+  * Example for splitting reports by undergraduate school: `split_by = c("ENorLA")`
+
+### Using the QualtricsTools Shiny App to Create Coded Comment Appendices
+
+This functionality is under development as of spring 2020 but is not yet available. Please use the command 
+line to generate coded comment appendices.
