A few edits based on comments Emma gave me on the code. I turned the generation of the results table into one big if/else conditional so that if a table is being proccessed that has an NA, it isn't proccessed multiple times. Other than that I clarified some documentation/comments, took out the $ operator that I had used at a few points by accident, and took out a conditional in an if statement checking whether there are recode values since it wasn't doing anything. I also reran all of the tests and it passed all of them!

--- a/Testing Stuff/FurtherSortingWork.Rmd
+++ b/Testing Stuff/FurtherSortingWork.Rmd
@@ -166,7 +166,7 @@ question <- questions[[3]]
 # Delete the table - I wanna generate it myself
 question$Table = NULL
 
-question <- mc_multiple_answer_results(question, original_first_rows, sort_by = "Choices_Alpha")
+question <- mc_multiple_answer_results(question, original_first_rows, sort_by = "Ahhh")
 question$Table
 ```
 
