--- a/Scratch_Work/Scratch_Work.Rmd
+++ b/Scratch_Work/Scratch_Work.Rmd
@@ -15,10 +15,10 @@ knitr::opts_chunk$set(echo = TRUE)
 # Set up stuff
 
 ```{r}
-# devtools::load_all(".")
+devtools::load_all(".")
 app()
 
-devtools::install_github("Matthewh19/QualtricsTools", ref = "More_Shiny_Work")
+# devtools::install_github("Matthewh19/QualtricsTools", ref = "More_Shiny_Work")
 library(QualtricsTools)
 ```
 
@@ -105,9 +105,9 @@ get_setup(qsf_path = here::here("data", "Sample Surveys", "Better Sample Survey"
           csv_path = here::here("data", "Sample Surveys", "Better Sample Survey", "Better_Sample_Survey.csv"),
           headerrows = 3)
 
-lean_dict <- lean_responses(blocks, responses)
+lean_responses <- lean_responses(blocks, responses)
 qdict <- create_response_column_dictionary(blocks, original_first_rows[1,], flow_from_survey(survey))
-panel_df <- create_panel_data(c("V10", "q1_favorite"), responses, lean_dict, qdict)
+panel_df <- create_panel_data(c("q2_favorite", "q4_rank_2"), responses, lean_dict, qdict)
 
 # Here we use fwrite over write.csv because fwrite takes advantage of a 
 # computer having multiple cores. The vast majority of modern computers do have
@@ -116,7 +116,7 @@ panel_df <- create_panel_data(c("V10", "q1_favorite"), responses, lean_dict, qdi
 
 if(!require('data.table')) { install.packages('data.table') } # Ensure data.table is installed.
 library('data.table') # Load data.table package for the fwrite function.
-fwrite(x = lean_dict, file = "C:/Users/username/Desktop/lean_dictionary.csv", row.names=FALSE)
+fwrite(x = lean_responses, file = "C:/Users/username/Desktop/lean_dictionary.csv", row.names=FALSE)
 fwrite(x = qdict, file = "C:/Users/username/Desktop/question_dictionary.csv", row.names=FALSE)
 fwrite(x = panel_df, file = "C:/Users/username/Desktop/panel_data.csv", row.names=FALSE)
 
