--- a/Testing stuff/Code.Rmd
+++ b/Testing stuff/Code.Rmd
@@ -18,11 +18,17 @@ devtools::load_all(".")
 library(tidyverse)
 # library(QualtricsTools)
 
-get_setup(
-  qsf_path = here::here("Testing stuff", "Example data", "QualtricsTools_Sample_Survey_Winter2021.qsf"),
-  csv_path = here::here("Testing stuff", "Example data", "QualtricsTools+Sample+Survey+Winter2021_January+21,+2021_11.32_DataTable.csv"),
-  headerrows = 3
+# qsf_path = here::here("Testing stuff", "Example data", "QualtricsTools_Sample_Survey_Winter2021.qsf")
+# csv_path = here::here("Testing stuff", "Example data", "QualtricsTools+Sample+Survey+Winter2021_January+23,+2021_14.59_DataTable.csv")
 
+qsf_path = here::here("Testing stuff", "Example data", "Long_Exhaustive_Sample_Survey.qsf")
+csv_path = here::here("Testing stuff", "Example data", "Long_Exhaustive_Sample_Survey_January+23,+2021_16.10_DataTable.csv")
+headerrows = 3
+
+get_setup(
+  qsf_path = qsf_path,
+  csv_path = csv_path,
+  headerrows = headerrows
 )
 ```
 
@@ -33,7 +39,7 @@ get_setup(
 
 make_results_tables(
   output_dir =  here::here("Testing stuff"),
-  filename = "Test Results Tables Data Table.docx"
+  filename = "Long Results Tables Data Table.docx"
 )
 
 
