--- a/Testing stuff/Code.Rmd
+++ b/Testing stuff/Code.Rmd
@@ -18,11 +18,11 @@ devtools::load_all(".")
 library(tidyverse)
 # library(QualtricsTools)
 
-qsf_path = here::here("Testing stuff", "Example data", "QualtricsTools_Sample_Survey_Winter2021.qsf")
-csv_path = here::here("Testing stuff", "Example data", "QualtricsTools+Sample+Survey+Winter2021_January+23,+2021_14.59_DataTable.csv")
+# qsf_path = here::here("Testing stuff", "Example data", "QualtricsTools_Sample_Survey_Winter2021.qsf")
+# csv_path = here::here("Testing stuff", "Example data", "QualtricsTools+Sample+Survey+Winter2021_January+23,+2021_14.59_DataTable.csv")
 
-# qsf_path = here::here("Testing stuff", "Example data", "Long_Exhaustive_Sample_Survey.qsf")
-# csv_path = here::here("Testing stuff", "Example data", "Long_Exhaustive_Sample_Survey_January+24,+2021_17.13_DataTable.csv")
+qsf_path = here::here("Testing stuff", "Example data", "Long_Exhaustive_Sample_Survey.qsf")
+csv_path = here::here("Testing stuff", "Example data", "Long_Exhaustive_Sample_Survey_January+24,+2021_17.13_DataTable.csv")
 headerrows = 3
 
 get_setup(
@@ -53,7 +53,7 @@ make_results_tables(
 
 make_text_appendices(
   output_dir =  here::here("Testing stuff"),
-  filename = "Test Text Appendix Data Table.docx"
+  filename = "Long Text Appendix Data Table.docx"
 )
 
 
