Made a few updates to the shiny app. Also made it such that MCSA with multiple TE are actually processed in the text appendix.

--- a/Testing stuff/Code.Rmd
+++ b/Testing stuff/Code.Rmd
@@ -53,9 +53,22 @@ make_results_tables(
 
 make_text_appendices(
   output_dir =  here::here("Testing stuff"),
-  filename = "Test Text Appendix Data Table.docx"
+  filename = "Long Text Appendix Data Table.docx"
 )
 
 
 ```
+
+
+
+
+
+## Lets open the app
+
+```{r}
+
+app()
+
+```
+
 
