I fixed a problem that MCSA and MCMA questions were having. I think I also fixed the problem with Matrix MA questions, but I am not certain.

--- a/Testing stuff/Code.Rmd
+++ b/Testing stuff/Code.Rmd
@@ -23,6 +23,10 @@ library(tidyverse)
 
 qsf_path = here::here("Testing stuff", "Example data", "Long_Exhaustive_Sample_Survey.qsf")
 csv_path = here::here("Testing stuff", "Example data", "Long_Exhaustive_Sample_Survey_January+29,+2021_10.20_DataTable.csv")
+
+# qsf_path = here::here("Testing stuff", "Example data", "Grad_Admin.qsf")
+# csv_path = here::here("Testing stuff", "Example data", "Grad_Admin.csv")
+
 headerrows = 3
 
 get_setup(
