Honestly I think that my changes are making things worse. I might try going back to before I tried fixing the comment coding stuff since that is when it all started to go downhill...

--- a/Testing stuff/Code.Rmd
+++ b/Testing stuff/Code.Rmd
@@ -15,7 +15,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ```{r}
 devtools::load_all(".")
 # devtools::install_github("emma-morgan/QualtricsTools")
-library(tidyverse)
+# library(tidyverse)
 # library(QualtricsTools)
 
 # qsf_path = here::here("Testing stuff", "Example data", "QualtricsTools_Sample_Survey_Winter2021.qsf")
